--- a/predator_prey/predator-prey.html
+++ b/predator_prey/predator-prey.html
@@ -17,13 +17,21 @@
             .container {
                 display: flex; 
                 flex-wrap: wrap; 
-                justify-content: center;
-                align-items: stretch;
+                justify-content: flex-start;
+                align-items: flex-start;
+            }
+            
+            .f {
+                
+            }
+
+            .g {
+
             }
         </style>
     </head>
     <body class="container">
-        <canvas id="field" width="150" height="150" style="flex-grow: 1;"></canvas>
-        <canvas id="graph" width="150" height="150" style="flex-grow: 2;"></canvas>
+        <canvas id="field" width="150" height="150" class="f"></canvas>
+        <canvas id="graph" width="150" height="150" class="g"></canvas>
     </body>
 </html>
