--- a/predator_prey/predator-prey.html
+++ b/predator_prey/predator-prey.html
@@ -16,7 +16,8 @@
             }
             .container {
                 display: flex; 
-                flex-wrap: wrap; 
+                flex-wrap: nowrap;
+                flex-direction: column;
                 justify-content: center;
                 align-items: stretch;
             }
